--- a/client-browse.html
+++ b/client-browse.html
@@ -363,10 +363,10 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
         <a href="client-browse.html"><i class="fas fa-home"></i> الرئيسية</a>
-        <a href="my-appointment.html"><i class="fas fa-calendar-alt"></i> مواعيدي</a>
+        <a href="my-appointments.html"><i class="fas fa-calendar-alt"></i> مواعيدي</a>
         <a href="profile.html"><i class="fas fa-user"></i> ملفي الشخصي</a>
         <a href="home.html"><i class="fas fa-cog"></i> خبراء </a>
-        <a href="#"><i class="fas fa-question-circle"></i> المساعدة</a>
+        <a href="booking.html"><i class="fas fa-question-circle"></i> الحجوز</a>
         <a href="#"><i class="fas fa-sign-out-alt"></i> تسجيل الخروج</a>
     </div>
 
